--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,13 @@
     {
       "path": "./tsconfig.node.json"
     }
-  ]
+  ],
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
+    "lib": ["dom", "es6"],
+    "types": ["chrome"]
+  }
 }
