--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,6 +12,7 @@
   },
   "host_permissions": ["<all_urls>"],
   "icons": {
+    "16": "icon-16.png",
     "32": "icon-32.png",
     "48": "icon-48.png",
     "128": "icon-128.png"
