--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,11 +6,10 @@
   "action": {
     "default_popup": "index.html"
   },
-  "permissions": ["scripting", "tabs", "activeTab"],
+  "permissions": ["scripting", "activeTab"],
   "background": {
     "service_worker": "background.js"
   },
-  "host_permissions": ["<all_urls>"],
   "icons": {
     "16": "icon-16.png",
     "32": "icon-32.png",
